--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "dev": "npx nodemon src/index.js"
+    "start": "node ./src/index.js",
+    "dev": "npx nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
